manifests/dev/ingress-alb1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: "alb"
  rules:
  - host: dev1.helloworld.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hw-nodejs
            port:
              number: 80
